fix(chatMessage): fix markdown code overflow (#243)

--- a/src/chat-message/style/chat-item.less
+++ b/src/chat-message/style/chat-item.less
@@ -333,6 +333,7 @@
 
   &__detail {
     display: inline-block;
+    max-width: var(--td-chat-item-text-max-width);
     padding: var(--td-chat-item-text-padding);
     border: var(--td-chat-item-text-border);
     border-radius: var(--td-chat-item-text-radius);
@@ -520,6 +521,7 @@
 .@{prefix}-chat__text {
   &--user {
     display: inline-block;
+    max-width: var(--td-chat-item-text-max-width);
     margin: var(--td-chat-item-text-detail-margin);
     padding: var(--td-chat-item-text-padding);
     border: var(--td-chat-item-text-border);
