--- a/src/chatbot/style/_var.less
+++ b/src/chatbot/style/_var.less
@@ -47,6 +47,7 @@
   --td-chat-item-content-max-width: 800px;
   --td-chat-item-content-padding: @pop-padding-xl 0;
   --td-chat-item-user-text-color: @text-color-secondary;
+  --td-chat-item-text-max-width: 100%;
   --td-chat-item-text-padding: @pop-padding-xl @pop-padding-xxl;
   --td-chat-item-text-content-padding: @pop-padding-xl 0;
   --td-chat-item-text-detail-padding: 6px 0 0;
